--- a/inst/rmarkdown/templates/tcc-template/resources/template.tex
+++ b/inst/rmarkdown/templates/tcc-template/resources/template.tex
@@ -117,7 +117,7 @@ $endif$
             }
 \local{Curitiba}
 \orientador[Orientador(a):]{$if(advisor)$$advisor$$endif$}
-\orientador[Coorientador(a):]{$if(advisor2)$$advisor2$$endif$}
+\coadvisor[Coorientador(a):]{$if(advisor2)$$advisor2$$endif$}
 
 \preambulo{Trabalho de Conclusão de Curso apresentado à disciplina Laboratório B do Curso de Graduação em Estatística da Universidade Federal do Paraná, como exigência parcial para obtenção do grau de Bacharel em Estatística.}
 
