--- a/inst/rmarkdown/templates/tcc-template/resources/template.tex
+++ b/inst/rmarkdown/templates/tcc-template/resources/template.tex
@@ -117,7 +117,8 @@ $endif$
             }
 \local{Curitiba}
 \orientador[Orientador(a):]{$if(advisor)$$advisor$$endif$}
-\coorientador[Coorientador(a):]{$if(coadvisor)$$coadvisor$$endif$}
+\coadvisor[Coorientador(a):]{Dr.}{Felipe Argolo}
+
 
 \preambulo{Trabalho de Conclusão de Curso apresentado à disciplina Laboratório B do Curso de Graduação em Estatística da Universidade Federal do Paraná, como exigência parcial para obtenção do grau de Bacharel em Estatística.}
 
